--- a/front/assets/css/transition.css
+++ b/front/assets/css/transition.css
@@ -1,23 +1,16 @@
-.fade-enter {
-  opacity: 0;
-}
-
-.fade-enter-active {
-  transition: opacity 0.5s;
-}
-
-.fade-leave-active {
-  transition: opacity 0.5s;
-}
-
-.fade-enter-to {
-  opacity: 1;
-}
-
-.fade-leave {
-  opacity: 1;
-}
-
+.fade-enter,
 .fade-leave-to {
   opacity: 0;
+  /* transform: scale(0.9); */
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: all 0.5s ease-out;
+}
+
+.fade-enter-to,
+.fade-leave {
+  opacity: 1;
+  /* transform: scale(1); */
 }
